--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -1,18 +1,20 @@
-
-  <header 
-      [ngClass]="{'medium-movies':medium === 'Movies', 'medium-series':medium === 'Series'}">
-      <h2>{{medium}}</h2>
-      <div *ngIf="mediaItems">{{ mediaItems | categoryList }}</div>
-  </header>
-  <section>
-    <app-media-item
-      [ngClass]="{'medium-movies': mediaItem.medium==='Movies', 'medium-series':mediaItem.medium==='Series'}" 
-      *ngFor="let mediaItem of mediaItems"
-      [mediaItem]="mediaItem"
-      (delete)="onMediaItemDelete($event)"></app-media-item>
-  </section>
-  <footer>
-    <a routerLink="/add">
-      <img src="assets/01.png" class="icon">
-    </a>
-  </footer>
+<header
+    [ngClass]="{'medium-movies':medium === 'Movies', 'medium-series':medium === 'Series'}">
+    <h2>{{medium}}</h2>
+    <app-category-list 
+      *ngIf="mediaItems"
+      [categories]="mediaItems | categoryList">
+    </app-category-list>
+</header>
+<section>
+  <app-media-item
+    [ngClass]="{'medium-movies': mediaItem.medium==='Movies', 'medium-series':mediaItem.medium==='Series'}"
+    *ngFor="let mediaItem of mediaItems"
+    [mediaItem]="mediaItem"
+    (delete)="onMediaItemDelete($event)"></app-media-item>
+</section>
+<footer>
+  <a routerLink="/add">
+    <img src="assets/01.png" class="icon">
+  </a>
+</footer>
